k8s/ingress-service.yaml
# apiVersion: networking.k8s.io/v1beta1
apiVersion: networking.k8s.io/v1
# apiVersion: extensions/v1beta1
# apiVersion: extensions/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/tls-acme: "true"
    acme.cert-manager.io/http01-ingress-class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: "*.idosegev.com"
    http:
      paths:
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: client-cluster-ip-service
            port: 
              number: 3000

      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: server-cluster-ip-service
            port:
              number: 5000
  tls:
  - hosts:
      - "idosegev.com"
      - "www.idosegev.com"
    secretName: k8s-multi-com-tls
